# raii

./: .astylerc  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  meson.build  raii.h
.githooks/: pre-commit
src/: CMakeLists.txt  raii.h
